--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Host Recon Tool
 
 Dependencies:
-Python 3.7
+Python 3.7+
 pywin32: https://pypi.python.org/pypi/pywin32
 python WMI: https://pypi.python.org/pypi/WMI/
 netaddr: https://pypi.python.org/pypi/netaddr
